--- a/package.json
+++ b/package.json
@@ -19,12 +19,13 @@
     "@angular/platform-browser": "~8.1.0",
     "@angular/platform-browser-dynamic": "~8.1.0",
     "@angular/router": "~8.1.0",
+    "angular-6-social-login": "^1.1.1",
+    "angular-passport": "^1.0.6",
     "bootstrap": "^4.3.1",
     "jquery": "^3.4.1",
+    "ngx-toastr": "^11.1.2",
     "popper": "^1.0.1",
     "popper.js": "^1.16.0",
-    "angular-passport": "^1.0.6",
-    "ngx-toastr": "^11.1.2",
     "rxjs": "~6.4.0",
     "tslib": "^1.9.0",
     "zone.js": "~0.9.1"
