--- a/package.json
+++ b/package.json
@@ -12,16 +12,19 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "~8.1.0",
+    "@angular/cdk": "~8.2.3",
     "@angular/common": "~8.1.0",
     "@angular/compiler": "~8.1.0",
     "@angular/core": "~8.1.0",
     "@angular/forms": "~8.1.0",
+    "@angular/material": "^8.2.3",
     "@angular/platform-browser": "~8.1.0",
     "@angular/platform-browser-dynamic": "~8.1.0",
     "@angular/router": "~8.1.0",
     "angular-6-social-login": "^1.1.1",
     "angular-passport": "^1.0.6",
     "bootstrap": "^4.3.1",
+    "hammerjs": "^2.0.8",
     "jquery": "^3.4.1",
     "ngx-toastr": "^11.1.2",
     "popper": "^1.0.1",
