--- a/package.json
+++ b/package.json
@@ -22,8 +22,10 @@
     "@angular/platform-browser-dynamic": "~8.1.0",
     "@angular/router": "~8.1.0",
     "angular-6-social-login": "^1.1.1",
+    "angular-font-awesome": "^3.1.2",
     "angular-passport": "^1.0.6",
     "bootstrap": "^4.3.1",
+    "font-awesome": "^4.7.0",
     "hammerjs": "^2.0.8",
     "jquery": "^3.4.1",
     "ngx-toastr": "^11.2.0",
