--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@angular/platform-browser": "~8.1.0",
     "@angular/platform-browser-dynamic": "~8.1.0",
     "@angular/router": "~8.1.0",
+    "@auth0/angular-jwt": "^3.0.1",
     "angular-6-social-login": "^1.1.1",
     "angular-font-awesome": "^3.1.2",
     "angular-passport": "^1.0.6",
